estoy aprendiendo Prework para mi desarrollo como desarrollador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Estoy aprendiendo Prework
+        Estoy aprendiendo Prework para continuar con mi desarrollo como desarrollador
     </p>
 </body>
 </html>
